[package]
name = "vt100-test"
version = "0.1.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"

default-run = "vt100-test"

[dependencies]
crossterm = "0.13"
env_logger = "0.7"
futures = "0.1.29"
mio = "0.6"
tokio = "0.1.22"
tokio-pty-process-stream = "0.2"
ttyrec = "0.2"
unicode-width = "0.1"
vt100 = "0.6"
vte = "0.3"
